--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.application.name=connect
-
-spring.datasource.url= 
-spring.datasource.username=mysql
-spring.datasource.password=connectazul123
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
