--- a/pom.xml
+++ b/pom.xml
@@ -31,20 +31,23 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-	<!-- Dependencia do banco H2 para testes-->
+		<!-- Dependencia do banco H2 para testes-->
 		<dependency>
     		<groupId>com.h2database</groupId>
     		<artifactId>h2</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+
 		<!-- Dependencia do Spring data jpa-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<!-- Dependencia do H2-->
 		<dependency>
 				<groupId>com.h2database</groupId>
@@ -57,14 +60,19 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-
+		<!-- Dependencia do SpringDoc -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+   		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
