--- a/pom.xml
+++ b/pom.xml
@@ -73,15 +73,39 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--  Spring Security com JWT para autenticação -->
+		<!-- Spring Boot Starter Security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
+		<!-- Spring Boot Starter Validation -->
+		<dependency> 
+			<groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-validation</artifactId> 
+		</dependency>
+
+		<!-- Lombok (Optional, for cleaner code) -->
+		<dependency> 
+			<groupId>org.projectlombok</groupId> 
+			<artifactId>lombok</artifactId> 
+			<optional>true</optional> 
+		</dependency> 
+
+		<!-- JWT Dependencies -->
+		<dependency> 
+			<groupId>io.jsonwebtoken</groupId> 
+			<artifactId>jjwt-api</artifactId> 
+			<version>0.11.5</version> 
+		</dependency> 
+		<dependency> 
+			<groupId>io.jsonwebtoken</groupId> 
+			<artifactId>jjwt-impl</artifactId> 
+			<version>0.11.5</version> 
+		</dependency> 
+		<dependency> 
+			<groupId>io.jsonwebtoken</groupId> 
+			<artifactId>jjwt-jackson</artifactId> 
+			<version>0.11.5</version> 
 		</dependency>
 
 	</dependencies>
