--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:h2:file:./data/connectdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=senha
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
